python_with_ingress_user_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-with-ingress-user
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  minReadySeconds: 200
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: python-with-ingress-user
  template:
    metadata:
      labels:
        app: python-with-ingress-user
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: python-with-ingress
          image: registry.digitalocean.com/botshot/python_with_ingress:userservice
          imagePullPolicy: Always
      imagePullSecrets:
        - name: doctlsec
          ports:
            - containerPort: 5000
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 1
