python_with_ingress_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-with-ingress
spec:
  type: NodePort
  selector:
    app: python-with-ingress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
