python_with_ingress_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-with-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: neeteshpython.botshot.ai
      http:
        paths:
          - path: "/api/v1/chatbot"
            pathType: Prefix
            backend:
              service:
                name: python-with-ingress
                port:
                  number: 80
          - path: "/api/v1/user"
            pathType: Prefix
            backend:
              service:
                name: python-with-ingress-user
                port:
                  number: 80
